--- a/test/ankita_experiment.ipynb
+++ b/test/ankita_experiment.ipynb
@@ -40,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('Datasets/mushrooms.csv')"
+    "data = pd.read_csv('datasets/mushrooms.csv')"
    ]
   },
   {
