Organized folders and modified both notebook files

--- a/test/manas.ipynb
+++ b/test/manas.ipynb
@@ -390,7 +390,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('dataset/mushrooms.csv')\n",
+    "df = pd.read_csv('data/mushrooms.csv')\n",
     "df"
    ]
   },
