--- a/test/manas.ipynb
+++ b/test/manas.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +384,7 @@
        "[8124 rows x 23 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1736,7 +1736,7 @@
       "    validate_parameter_constraints(\n",
       "  File \"f:\\Masroom\\mushroom_classification\\mushroom_env\\Lib\\site-packages\\sklearn\\utils\\_param_validation.py\", line 95, in validate_parameter_constraints\n",
       "    raise InvalidParameterError(\n",
-      "sklearn.utils._param_validation.InvalidParameterError: The 'criterion' parameter of DecisionTreeRegressor must be a str among {'absolute_error', 'squared_error', 'poisson', 'friedman_mse'}. Got 'mse' instead.\n",
+      "sklearn.utils._param_validation.InvalidParameterError: The 'criterion' parameter of DecisionTreeRegressor must be a str among {'squared_error', 'absolute_error', 'friedman_mse', 'poisson'}. Got 'mse' instead.\n",
       "\n",
       "  warnings.warn(some_fits_failed_message, FitFailedWarning)\n",
       "f:\\Masroom\\mushroom_classification\\mushroom_env\\Lib\\site-packages\\sklearn\\model_selection\\_search.py:1051: UserWarning: One or more of the test scores are non-finite: [nan nan  1.  1.]\n",
