--- a/test/01_data_ingestion.ipynb
+++ b/test/01_data_ingestion.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "text/plain": [
-       "'f:\\\\Masroom\\\\mushroom_classification\\\\test'"
+       "'e:\\\\My_Works\\\\Internships\\\\iNeuron\\\\mushroom_classification\\\\test'"
       ]
      },
      "execution_count": 2,
@@ -46,7 +46,7 @@
     {
      "data": {
       "text/plain": [
-       "'f:\\\\Masroom\\\\mushroom_classification'"
+       "'e:\\\\My_Works\\\\Internships\\\\iNeuron\\\\mushroom_classification'"
       ]
      },
      "execution_count": 4,
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,13 +136,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -151,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,45 +198,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-04-20 01:04:41,388: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2024-04-20 01:04:41,684: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2024-04-20 01:04:41,874: INFO: common: yaml file: schema.yaml loaded successfully]\n",
-      "[2024-04-20 01:04:41,876: INFO: common: created directory at: artifacts]\n",
-      "[2024-04-20 01:04:41,877: INFO: common: created directory at: artifacts/data_ingestion]\n",
-      "[2024-04-20 01:04:44,454: INFO: 1268487314: artifacts/data_ingestion/mushrooms.zip download! with following info: \n",
-      "Connection: close\n",
-      "Content-Length: 27586\n",
-      "Cache-Control: max-age=300\n",
-      "Content-Security-Policy: default-src 'none'; style-src 'unsafe-inline'; sandbox\n",
-      "Content-Type: application/zip\n",
-      "ETag: \"3c4f7b776333f24077599c95d3fb073e2118351a0fdd11623682b96e4e38cf75\"\n",
-      "Strict-Transport-Security: max-age=31536000\n",
-      "X-Content-Type-Options: nosniff\n",
-      "X-Frame-Options: deny\n",
-      "X-XSS-Protection: 1; mode=block\n",
-      "X-GitHub-Request-Id: 6352:28D757:F30B0:13FE6B:6622C695\n",
-      "Accept-Ranges: bytes\n",
-      "Date: Fri, 19 Apr 2024 19:31:35 GMT\n",
-      "Via: 1.1 varnish\n",
-      "X-Served-By: cache-bom4744-BOM\n",
-      "X-Cache: MISS\n",
-      "X-Cache-Hits: 0\n",
-      "X-Timer: S1713555095.804460,VS0,VE276\n",
-      "Vary: Authorization,Accept-Encoding,Origin\n",
-      "Access-Control-Allow-Origin: *\n",
-      "Cross-Origin-Resource-Policy: cross-origin\n",
-      "X-Fastly-Request-ID: d1f3d277de0b32ee06a5c07807f88f2f2bebeef1\n",
-      "Expires: Fri, 19 Apr 2024 19:36:35 GMT\n",
-      "Source-Age: 0\n",
-      "\n",
-      "]\n"
+      "[2024-04-24 11:23:20,571: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2024-04-24 11:23:20,572: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2024-04-24 11:23:20,575: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2024-04-24 11:23:20,577: INFO: common: created directory at: artifacts]\n",
+      "[2024-04-24 11:23:20,578: INFO: common: created directory at: artifacts/data_ingestion]\n",
+      "[2024-04-24 11:23:20,579: INFO: 1549246017: File already exists of size: ~ 27 KB]\n"
      ]
     }
    ],
@@ -257,13 +224,6 @@
     "except Exception as e:\n",
     "    raise e"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -282,7 +242,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
