--- a/test/01_data_ingestion.ipynb
+++ b/test/01_data_ingestion.ipynb
@@ -165,7 +165,7 @@
     "    def __init__(self, config: DataIngestionConfig):\n",
     "        self.config = config\n",
     "\n",
-    "    def download_file(self):\n",
+    "    def download_file(self) -> None:\n",
     "        if not os.path.exists(self.config.local_data_file):\n",
     "            filename, headers = request.urlretrieve(\n",
     "                url=self.config.source_URL,\n",
@@ -177,7 +177,7 @@
     "            logger.info(f\"File already exists of size: {\n",
     "                        get_size(Path(self.config.local_data_file))}\")\n",
     "\n",
-    "    def extract_zip_file(self):\n",
+    "    def extract_zip_file(self) -> None:\n",
     "        \"\"\"\n",
     "        zip_file_path: str\n",
     "        Extracts the zip file into the data directory\n",
