Added pipeline in 02_data_validation.ipynb

--- a/test/02_data_validation.ipynb
+++ b/test/02_data_validation.ipynb
@@ -172,6 +172,40 @@
     "        except Exception as e:\n",
     "            raise e"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2024-04-24 20:24:21,707: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2024-04-24 20:24:21,717: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2024-04-24 20:24:21,735: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2024-04-24 20:24:21,737: INFO: common: created directory at: artifacts]\n",
+      "[2024-04-24 20:24:21,738: INFO: common: created directory at: artifacts/data_validation]\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    config = ConfigurationManager()\n",
+    "    data_validation_config = config.get_data_validation_config()\n",
+    "    data_validation = DataValiadtion(config=data_validation_config)\n",
+    "    data_validation.validate_all_columns()\n",
+    "except Exception as e:\n",
+    "    raise e"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
