--- a/test/04_model_trainer.ipynb
+++ b/test/04_model_trainer.ipynb
@@ -78,7 +78,6 @@
     "class ModelTrainerConfig:\n",
     "    root_dir: Path\n",
     "    train_data_path: Path\n",
-    "    test_data_path: Path\n",
     "    model_name: str\n",
     "    max_depth: int\n",
     "    n_estimators: int\n",
@@ -87,10 +86,51 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.constants import *\n",
+    "from src.utils.common import read_yaml, create_directories"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class ConfigurationManager:\n",
+    "    def __init__(\n",
+    "            self,\n",
+    "            config_filepath=CONFIG_FILE_PATH,\n",
+    "            params_filepath=PARAMS_FILE_PATH,\n",
+    "            schema_filepath=SCHEMA_FILE_PATH):\n",
+    "\n",
+    "        self.config = read_yaml(config_filepath)\n",
+    "        self.params = read_yaml(params_filepath)\n",
+    "        self.schema = read_yaml(schema_filepath)\n",
+    "\n",
+    "        create_directories([self.config.artifacts_root])\n",
+    "\n",
+    "    def get_model_trainer_config(self) -> ModelTrainerConfig:\n",
+    "        config = self.config.model_trainer\n",
+    "        params = self.params.RandomForestClassifier\n",
+    "        schema = self.schema.TARGET_COLUMN\n",
+    "\n",
+    "        create_directories([config.root_dir])\n",
+    "\n",
+    "        model_trainer_config = ModelTrainerConfig(\n",
+    "            root_dir=config.root_dir,\n",
+    "            train_data_path=config.train_data_path\n",
+    "            model_name=config.model_name\n",
+    "            max_depth=params.max_depth\n",
+    "            n_estimators=params.n_estimators\n",
+    "            TARGET_COLUMN=schema.TARGET_COLUMN\n",
+    "        )\n",
+    "\n",
+    "        return model_trainer_config"
+   ]
   }
  ],
  "metadata": {
