--- a/test/04_model_trainer.ipynb
+++ b/test/04_model_trainer.ipynb
@@ -131,6 +131,49 @@
     "\n",
     "        return model_trainer_config"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import os\n",
+    "from src import logger\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "import joblib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ModelTrainer:\n",
+    "    def __init__(self, config: ModelTrainerConfig):\n",
+    "        self.config = config\n",
+    "\n",
+    "    def train(self):\n",
+    "        train_data = pd.read_csv(self.config.train_data_path)\n",
+    "\n",
+    "        train_x = train_data.drop([self.config.target_column], axis=1)\n",
+    "        train_y = train_data[[self.config.target_column]]\n",
+    "\n",
+    "\n",
+    "        clf = RandomForestClassifier(max_depth=self.config.max_depth, n_estimators=self.config.n_estimators, random_state=42)\n",
+    "        clf.fit(train_x, train_y)\n",
+    "\n",
+    "        joblib.dump(clf, os.path.join(self.config.root_dir, self.config.model_name))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
