--- a/test/03_data_transformation.ipynb
+++ b/test/03_data_transformation.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "text/plain": [
-       "'e:\\\\My_Works\\\\Internships\\\\iNeuron\\\\mushroom_classification\\\\test'"
+       "'d:\\\\Work\\\\Internship\\\\Inuron\\\\mushroom_classification\\\\test'"
       ]
      },
      "execution_count": 2,
@@ -46,7 +46,7 @@
     {
      "data": {
       "text/plain": [
-       "'e:\\\\My_Works\\\\Internships\\\\iNeuron\\\\mushroom_classification'"
+       "'d:\\\\Work\\\\Internship\\\\Inuron\\\\mushroom_classification'"
       ]
      },
      "execution_count": 4,
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,29 +119,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "from src import logger\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
     "from sklearn.model_selection import train_test_split\n",
+    "\n",
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "class DataTransformation:\n",
     "    def __init__(self, config: DataTransformationConfig):\n",
     "        self.config = config\n",
+    "        self.data = pd.read_csv(self.config.data_path)\n",
+    "\n",
+    "    def label_encoding(self) -> None:\n",
+    "        le = LabelEncoder()\n",
+    "\n",
+    "        self.data = self.data.apply(\n",
+    "            lambda x: le.fit_transform(x) if x.dtype == 'O' else x)\n",
+    "\n",
     "\n",
     "    def train_test_splitting(self) -> None:\n",
-    "        data = pd.read_csv(self.config.data_path)\n",
-    "\n",
-    "        train, test = train_test_split(data, test_size=0.2)\n",
+    "        train, test = train_test_split(self.data, test_size=0.2)\n",
     "\n",
     "        train.to_csv(os.path.join(\n",
     "            self.config.root_dir, \"train.csv\"), index=False)\n",
@@ -158,21 +167,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-04-24 20:24:28,225: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2024-04-24 20:24:28,229: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2024-04-24 20:24:28,240: INFO: common: yaml file: schema.yaml loaded successfully]\n",
-      "[2024-04-24 20:24:28,243: INFO: common: created directory at: artifacts]\n",
-      "[2024-04-24 20:24:28,244: INFO: common: created directory at: artifacts/data_transformation]\n",
-      "[2024-04-24 20:24:28,374: INFO: 3324859827: Splitting data into Training and Test sets]\n",
-      "[2024-04-24 20:24:28,375: INFO: 3324859827: (6499, 23)]\n",
-      "[2024-04-24 20:24:28,376: INFO: 3324859827: (1625, 23)]\n",
+      "[2024-04-25 13:12:06,557: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2024-04-25 13:12:06,561: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2024-04-25 13:12:06,564: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2024-04-25 13:12:06,565: INFO: common: created directory at: artifacts]\n",
+      "[2024-04-25 13:12:06,566: INFO: common: created directory at: artifacts/data_transformation]\n",
+      "[2024-04-25 13:12:06,673: INFO: 229918775: Splitting data into Training and Test sets]\n",
+      "[2024-04-25 13:12:06,673: INFO: 229918775: (6499, 23)]\n",
+      "[2024-04-25 13:12:06,674: INFO: 229918775: (1625, 23)]\n",
       "(6499, 23)\n",
       "(1625, 23)\n"
      ]
@@ -183,6 +192,7 @@
     "    config = ConfigurationManager()\n",
     "    data_transformation_config = config.get_data_transformation_config()\n",
     "    data_transformation = DataTransformation(config=data_transformation_config)\n",
+    "    data_transformation.label_encoding()\n",
     "    data_transformation.train_test_splitting()\n",
     "except Exception as e:\n",
     "    raise e"
