--- a/test/04_model_trainer.ipynb
+++ b/test/04_model_trainer.ipynb
@@ -79,7 +79,6 @@
     "    root_dir: Path\n",
     "    train_data_path: Path\n",
     "    model_name: str\n",
-    "    max_depth: int\n",
     "    n_estimators: int\n",
     "    TARGET_COLUMN: str"
    ]
@@ -96,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,11 +121,10 @@
     "\n",
     "        model_trainer_config = ModelTrainerConfig(\n",
     "            root_dir=config.root_dir,\n",
-    "            train_data_path=config.train_data_path\n",
-    "            model_name=config.model_name\n",
-    "            max_depth=params.max_depth\n",
-    "            n_estimators=params.n_estimators\n",
-    "            TARGET_COLUMN=schema.TARGET_COLUMN\n",
+    "            train_data_path=config.train_data_path,\n",
+    "            model_name=config.model_name,\n",
+    "            n_estimators=params.n_estimators,\n",
+    "            TARGET_COLUMN=schema.name\n",
     "        )\n",
     "\n",
     "        return model_trainer_config"
@@ -134,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,14 +156,49 @@
     "    def train(self):\n",
     "        train_data = pd.read_csv(self.config.train_data_path)\n",
     "\n",
-    "        train_x = train_data.drop([self.config.target_column], axis=1)\n",
-    "        train_y = train_data[[self.config.target_column]]\n",
+    "        train_x = train_data.drop([self.config.TARGET_COLUMN], axis=1)\n",
+    "        train_y = train_data[[self.config.TARGET_COLUMN]]\n",
     "\n",
     "\n",
-    "        clf = RandomForestClassifier(max_depth=self.config.max_depth, n_estimators=self.config.n_estimators, random_state=42)\n",
+    "        clf = RandomForestClassifier(n_estimators=self.config.n_estimators)\n",
     "        clf.fit(train_x, train_y)\n",
     "\n",
     "        joblib.dump(clf, os.path.join(self.config.root_dir, self.config.model_name))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2024-04-25 13:33:41,997: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2024-04-25 13:33:41,999: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2024-04-25 13:33:42,003: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2024-04-25 13:33:42,005: INFO: common: created directory at: artifacts]\n",
+      "[2024-04-25 13:33:42,006: INFO: common: created directory at: artifacts/model_trainer]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\Work\\Internship\\Inuron\\mushroom_classification\\mushroom_env\\Lib\\site-packages\\sklearn\\base.py:1474: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
+      "  return fit_method(estimator, *args, **kwargs)\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    config = ConfigurationManager()\n",
+    "    model_trainer_config = config.get_model_trainer_config()\n",
+    "    model_trainer_config = ModelTrainer(config=model_trainer_config)\n",
+    "    model_trainer_config.train()\n",
+    "except Exception as e:\n",
+    "    raise e"
    ]
   },
   {
