--- a/test/05_model_evaluation.ipynb
+++ b/test/05_model_evaluation.ipynb
@@ -2,6 +2,184 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'e:\\\\My_Works\\\\Internships\\\\iNeuron\\\\mushroom_classification\\\\test'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.chdir('../')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'e:\\\\My_Works\\\\Internships\\\\iNeuron\\\\mushroom_classification'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dataclasses import dataclass\n",
+    "from pathlib import Path\n",
+    "\n",
+    "\n",
+    "@dataclass(frozen=True)\n",
+    "class ModelEvaluationConfig:\n",
+    "    root_dir: Path\n",
+    "    test_data_path: Path\n",
+    "    model_path: Path\n",
+    "    metric_file_name: Path\n",
+    "    all_params: dict\n",
+    "    target_column: str"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.constants import *\n",
+    "from src.utils.common import read_yaml, create_directories, save_json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ConfigurationManager:\n",
+    "    def __init__(\n",
+    "            self,\n",
+    "            config_filepath=CONFIG_FILE_PATH,\n",
+    "            params_filepath=PARAMS_FILE_PATH,\n",
+    "            schema_filepath=SCHEMA_FILE_PATH):\n",
+    "\n",
+    "        self.config = read_yaml(config_filepath)\n",
+    "        self.params = read_yaml(params_filepath)\n",
+    "        self.schema = read_yaml(schema_filepath)\n",
+    "\n",
+    "        create_directories([self.config.artifacts_root])\n",
+    "\n",
+    "    def get_model_evaluation_config(self) -> ModelEvaluationConfig:\n",
+    "        config = self.config.model_evaluation\n",
+    "        params = self.params.RandomForestClassifier\n",
+    "        schema = self.schema.TARGET_COLUMN\n",
+    "\n",
+    "        create_directories([config.root_dir])\n",
+    "\n",
+    "        model_evaluation_config = ModelEvaluationConfig(\n",
+    "            root_dir=config.root_dir,\n",
+    "            test_data_path=config.test_data_path,\n",
+    "            model_path=config.model_path,\n",
+    "            metric_file_name=config.metric_file_name,\n",
+    "            all_params=params,\n",
+    "            target_column=schema.name,\n",
+    "        )\n",
+    "\n",
+    "        return model_evaluation_config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.metrics import classification_report\n",
+    "from urllib.parse import urlparse\n",
+    "import numpy as np\n",
+    "import joblib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ModelEvaluation:\n",
+    "    def __int__(self, config: ModelEvaluationConfig):\n",
+    "        self.config = config\n",
+    "\n",
+    "    def save_results(self) -> None:\n",
+    "        test_data = pd.read_csv(self.config.test_data_path)\n",
+    "        model = joblib.load(self.config.model_path)\n",
+    "\n",
+    "        test_x = test_data.drop([self.config.target_column], axis=1)\n",
+    "        test_y = test_data[[self.config.target_column]]\n",
+    "\n",
+    "        predictions = model.predict(test_x)\n",
+    "\n",
+    "        eval_report = classification_report(test_y, predictions, output_dict=True)\n",
+    "\n",
+    "        save_json(path=Path(self.config.metric_file_name), data=eval_report)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    config = ConfigurationManager()\n",
+    "    data_evaluation_config = config.get_model_evaluation_config()\n",
+    "    data_evaluation = ModelEvaluation(config=data_evaluation_config)\n",
+    "    data_evaluation.save_results()\n",
+    "except Exception as e:\n",
+    "    raise e"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -9,8 +187,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "mushroom_env",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
