--- a/test/05_model_evaluation.ipynb
+++ b/test/05_model_evaluation.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,25 +128,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from sklearn.metrics import classification_report\n",
-    "from urllib.parse import urlparse\n",
-    "import numpy as np\n",
     "import joblib"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "class ModelEvaluation:\n",
-    "    def __int__(self, config: ModelEvaluationConfig):\n",
+    "    def __init__(self, config: ModelEvaluationConfig):\n",
     "        self.config = config\n",
     "\n",
     "    def save_results(self) -> None:\n",
@@ -165,9 +163,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2024-04-25 17:48:55,690: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2024-04-25 17:48:55,692: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2024-04-25 17:48:55,694: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2024-04-25 17:48:55,695: INFO: common: created directory at: artifacts]\n",
+      "[2024-04-25 17:48:55,696: INFO: common: created directory at: artifacts/model_evaluation]\n",
+      "[2024-04-25 17:48:55,852: INFO: common: json file saved at: artifacts\\model_evaluation\\metric.json]\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    config = ConfigurationManager()\n",
